kube-32-Set-up-Traefik-Ingress/backofspring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: bankofspring
  name: bankofspring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bankofspring-main
  template:
    metadata:
      labels:
        run: bankofspring-main
    spec:
      containers:
      - image: john3kuae/bankofspring:latest
        name: bankofspring
        ports:
          - containerPort: 8080
